Closed Bug 17196 Opened 26 years ago Closed 26 years ago

Too many focus/blur messages being generated

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ckritzer, Assigned: rods)

References

()

Details

Overview Description: When clicking on a text input field, there are about twice as many focus, blur and click events reported as appear to happen. Steps to Reproduce: 1) Launch apprunner 2) Load http://marvin.mcom.com/whitebox/tools/Event%20Tools/16-1.html 3) Click on any text input area ([1], [2], [3], [7], or [8]) and observe the output in the Input Events[3] field. Actual Results: Using the field "Username [1]" as an example, the output will look something like this: Focus: username () Blur: username () Focus: username () Blur: username () Focus: username () Click: username () Click: username () Expected Results: Using the field "Username [1]" as an example: Focus: username () Click: username () Build Date & Platform: MacOS86 1999102508 apprunner Linux6 1999102508 apprunner Win98 1999102508 apprunner Additional Builds and Platforms: None. Additional Information: None.
Assignee: joki → rods
Rod, I'm going to sling this your way as you've been doing a lot with this and I don't want to break any of your work.
This is a known problem, it happens because the text control has a native window. This will go away when the light-weight webshells are implemented. added buster to the cc list
Status: NEW → ASSIGNED
The problem is the native window that gets the mouse down click is different than the native window that the nsHTMLInputElement is trying to the focus on and this causes all the focus events to be generated.
Blocks: 14618
Blocks: 18471
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fixed -
Depends on: 20207
Whiteboard: bug blocked by
Now no focus/blur messages are being created on: Linux 1999112809 apprunner Couldn't test on: Win98 1999112809 apprunner not launching MacOS86 1999112715 apprunner installer hangs
Whiteboard: bug blocked by → blocked by bug 20207
Setting self as QAContact
QA Contact: janc → ckritzer
No longer blocks: 18471
Updating QA Contact.
QA Contact: ckritzer → lorca
Reassigning QA Contact for all open and unverified bugs previously under Lorca's care to Gerardo as per phone conversation this morning.
QA Contact: lorca → gerardok
This is no longer being blocked by bug 20207.
Whiteboard: blocked by bug 20207
QA contact updated
QA Contact: gerardok → madhur
verified on build 2001-08-06-trunk
Status: RESOLVED → VERIFIED
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.