It will now mask out any focus events that may be generated because of native windows r=buster, bug 17196